--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 nature or reading a good book.
             </p>
             <p>
-                Feel free to check out my <a href="https://drive.google.com/file/d/1cm8HUS_Db0nUUQuFwkVQSbt4OBpoiQ3N/view?usp=drivesdk" target="_blank">resume</a> 
+                Feel free to check out my <a href="https://drive.google.com/file/d/1XY-O9fjTeuwuA1-iCiKLB3bqknuv0R_S/view?usp=sharing" target="_blank">resume</a> 
                 to learn more about my professional experience and skills.
             </p>
         </div>
